--- a/index.html
+++ b/index.html
@@ -1,30 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Sinki Diamond Discovery</title>
-  <style>
-    .text,background&fontsize {
-      text-align:  centre;
-      font-size:  18pt;
-      background-color:  darkgreen;
-    }
-   </style>
+ <div style="text-align: center;">
+ <title>NR World</title>
+ </div>
 </head>
 <body>
-  <div style="border:1px solid black; background-color:orange; color: lime; font-size: 40px">
-  <p>The Sinki Diamond.<br/>
-  </div>
-  <div style="color: lime; background-color: orange;">
-  <p>The Sinki Diamond has been found by Professor Thakur and Miss Lily.
-  <p>This beautiful Diamond is over 1 trillion years old and is worth over £100,000,000,000 trillion!!!!!
-  <p>The diamond is 200 hundred carats!!! (More than gold!!!)
-  <p>This is the most valuable item in the world!!!
-  <p>The diamond was made in MORDOR by a man called Mr.S, we don't know who this is but, he must have been rich!!!
-  <p>During the Russian Revolution, the Sinki Diamond was stolen from the Nobleman's palace in St Petersburg, so for the next 30 years, the Sinki Diamond's whereabouts were unknown. But now it has been found and it will be kept in the Kelvingrove Museum.
-  <p>This article is sponsered by NR Reading.
-  <p> Thank you for reading this article.<p/>
-  <img src="sinkidiamond.jpg"/> 
-  <img src="teamphoto.jpg"/>
-  </div>
+ <div style="background-color: tomato; color: green; text-align: center; height: 78%; width: 92%; border: 50px double green;">
+ <div style="color: darkslateblue; font-size: 25px;">
+ <p>Welcome to the backup NR World website!<p/>
+ </div>
+ <div style="font-size: 18px;">
+ <p>This will be used if the offical website is unavalible.<br/>
+ <p>If there is anything you would like to recommend, please feel free to contact us on whatsapp.<br/>
+  <img src="unamed.jpg"/> 
+ </div>
 </body>
 </html>
