--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <p>This will be used if the offical website is unavalible.<br/>
  <p>Please keep checking the Normal website:https://noelyash2009.wixsite.com/nrworld<br/>
  <p>If there is anything you would like to recommend, please feel free to contact us on whatsapp.<br/>
-  <img src="unamed.jfif"/> 
+  <img src="world.png"/> 
  </div>
 </body>
 </html>
