--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
  <p>Please keep checking the Normal website:https://noelyash2009.wixsite.com/nrworld<br/>
  <p>If there is anything you would like to recommend, please feel free to contact us on whatsapp.<br/>
   <img src="world.png"/> 
+ <div style="color: lime; font-size: 15px;">
+ <p>Copywrite 2021 NR World<p/>
  </div>
 </body>
 </html>
