--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <p>If there is anything you would like to recommend, please feel free to contact us on whatsapp.<br/>
   <img src="world.png"/> 
  <div style="color: lime; font-size: 15px;">
- <p>Copywrite 2021 NR World<p/>
+ <p>Copywrite 2021 NR World<br/>
  </div>
 </body>
 </html>
