--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </div>
 </head>
 <body>
- <div style="background-color: tomato; color: green; text-align: center; height: 80; width: 92%; border: 60px double green;">
+ <div style="background-color: tomato; color: lime; text-align: center; height: 80; width: 92%; border: 60px double green;">
  <div style="color: darkslateblue; font-size: 25px;">
  <p>Welcome to the backup NR World website!<p/>
  </div>
