--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  </script>
 </head>
 <body>
- <p style="font-size: 30pt;">THE SINKI DIAMOND DISCOVERY</p>
+ <p style="font-size: 30pt;">BACKUP NR WORLD WEBSITE</p>
  <p>Please enter the password to view this page.</p>
  <p>Password:<input id="passwordBox" type="password"/></p>
  <a href="nrworld.html" onclick="return checkPassword();">
