--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
  <p>Password:<input id="passwordBox" type="password"/></p>
  <a href="nrworld.html" onclick="return checkPassword();">
   Click here to submit password and view page
+ <p style="font-size: 9pt;">Need help? Email us at noroxuniverse@gmail.com</p>
  </a>
 </body>
 </html>
