--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
  <p></p>
  <p></p>
  <p></p>
- <p style="font-size: 9pt;" font-color: lime; >Need help? Email us at noroxuniverse@gmail.com</p>
+ <p style="font-size: 9pt;" "font-color: lime;" >Need help? Email us at noroxuniverse@gmail.com</p>
 </body>
 </html>
