--- a/nrworld.html
+++ b/nrworld.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <link rel='icon' href='favcoin.ico' type='image/x-icon'/ >
  <div style="text-align: center;">
  <title>NR World</title>
  </div>
