--- a/nrworld.html
+++ b/nrworld.html
@@ -15,7 +15,7 @@
  <p>This will be used if the offical website is unavalible.<br/>
  <p>Please keep checking the Normal website: https://noelyash2009.wixsite.com/nrworld<br/>
  <p>If there is anything you would like to recommend, please feel free to contact us on whatsapp.<br/>
-  <img src="<a href="https://imageresizer.com" target="_blank">Image Resizer</a>"/> 
+  <img src="cartoonworld.png">Image Resizer</a>"/> 
  <p><br/>
  <p><br/>
  <p><br/>
