--- a/nrworld.html
+++ b/nrworld.html
@@ -16,8 +16,8 @@
  <p>Please keep checking the Normal website: https://noelyash2009.wixsite.com/nrworld<br/>
  <p>If there is anything you would like to recommend, please feel free to contact us on whatsapp.<br/>
   <img src="cartoonworld.png"></a> 
- <p><br/>
- <p><br/>
+ <p>Here we will post upcoming shows, upload quotes, and update you with all the lastest NR World news.<br/>
+ <p>Note: We will only use this website if the offical site insn't avalible.<br/>
  <p><br/>
  <p><br/>
  <p><br/>
