--- a/nrworld.html
+++ b/nrworld.html
@@ -13,7 +13,7 @@
  </div>
  <div style="font-size: 18px;">
  <p>This will be used if the offical website is unavalible.<br/>
- <p>Please keep checking the Normal website: https://noelyash2009.wixsite.com/nrworld<br/>
+ <p>Please keep checking the Normal website: <a href="https://noelyash2009.wixsite.com/nrworld"> Check the Normal website </a>
  <p>If there is anything you would like to recommend, please feel free to contact us on whatsapp.<br/>
   <img src="cartoonworld.png"></a> 
  <p>Here we will post upcoming shows, upload quotes, and update you with all the lastest NR World news.<br/>
