--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel='icon' href='world.png' type='image/x-icon'/ >
  <title>Password</title>
  <style>
   body {
