--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   function checkPassword() {
    var password = document.getElementById("passwordBox");
    var passwordText = password.value;
-   if(passwordText == "norox's universe") {
+   if(passwordText == "since2019") {
     return true;
    }
    alert("Access denied! Incorrect password!");
